[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "T2048 Nexus"
version = "0.1.0"
description = "A hybrid Tetris + 2048 puzzle game implemented in Python."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "alirkal34-jpg" }]
license = { file = "LICENSE" }
dependencies = [
  "pygame>=2.0.0",
  "numpy>=1.19.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
